--- a/page2.html
+++ b/page2.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Welcome to Mars!</title>
-    <meta name="description" content="">
-    <meta name="author" content="Ross McKinnon">
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-
-  <body ng-app="myFormApp" class="page2">
+<div class="page2">
     <h2>Who are you?</h2>
-
-    <form ng-controller="RegisterFormCtrl" ng-submit="submitRegistration($event)" name="registerForm" novalidate>
-      <fieldset>
+    <form ng-submit="submitRegistration($event)" name="registerForm" novalidate>
+    <fieldset>
       <input ng-model="person.name" type="text" name="name" ng-minlength="2" placeholder="Name" required class="name"/>
       <!-- <code>registerForm.name.$valid = {{ registerForm.name.$valid }} <code> -->
       <input ng-model="person.age" type="number" name="age" placeholder="Age" required class="age"/>
@@ -26,16 +15,10 @@
         <option value="e">Yoga teacher</option>
       </select>
       <!-- <code>registerForm.occupation.$valid = {{ registerForm.occupation.$valid }} <code> -->
-      </fieldset>
+    </fieldset>
 
-      <fieldset>
-        <button ng-disabled="registerForm.$invalid">Check in</button>
-      </fieldset>
+    <fieldset>
+      <button ng-disabled="registerForm.$invalid">Check in</button>
+    </fieldset>
     </form>
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-  </body>
-</html>
+</div>
