--- a/page4.html
+++ b/page4.html
@@ -4,11 +4,14 @@
     <form ng-submit="submitReport($event)" name="reportForm" novalidate >
       <select ng-model="person.alienType" name="alienType" required class="alienType">
         <option value="" selected>Select alien type</option>
+        <!-- gets data from the API -->
+        <option value="{{ aliens.id }}" ng-repeat="alien in aliens" >{{ alien.type }}</option>
+        <!-- old data replaced by API line above
         <option value="a">Lizard Man</option>
         <option value="b">Giant Slug</option>
         <option value="c">Rouge Andriod</option>
         <option value="d">Octospider</option>
-        <option value="e">Spiderpus</option>
+        <option value="e">Spiderpus</option> -->
       </select>
       <!-- <code>reportForm.alienType.$valid = {{ reportForm.alienType.$valid }} <code> -->
       <textarea ng-model="person.actionTaken" name="actionTaken" cols="" rows="" required class="actionTaken" placeholder="Action taken"></textarea>
