before adding swipe

--- a/page1.html
+++ b/page1.html
@@ -1,5 +1,5 @@
 
-<div class="page1">
+<div class="page1" ng-swipe-left="swipeLeft()">
   <h1>Welcome to Mars!</h1>
     <a ui-sref="register"><div class="circle"></div></a>
   <h2>Check in now</h2>
