--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,4 @@
-<div class="page2">
+<div class="page2" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
     <h2>Who are you?</h2>
     <form ng-submit="submitRegistration($event)" name="registerForm" novalidate>
     <fieldset>
