--- a/page3.html
+++ b/page3.html
@@ -1,4 +1,4 @@
-<div class="page3">
+<div class="page3" ng-swipe-left="swipeLeft()" ng-swipe-right="swipeRight()">
   <div class="header">
     <h2>Recent Encounters</h2>
     <h3>See an alien? Report it!</h3>
