--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="js/angular-animate.min.js"></script>
     <script src="js/angular-cookies.min.js"></script>
+    <script src="js/angular-touch.min.js"></script>
     <!-- Oct 22: Routing & Templates, Exercise 2: -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
