--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Welcome to Mars!</title>
     <meta name="description" content="">
     <meta name="author" content="Ross McKinnon">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
   </head>
 
   <body ui-view>
